# servernode

./: .gitignore  CLAUDE.md  test_events.py
src/agv_bridge/: AGV_BRIDGE_GUIDE.md  CMakeLists.txt  README.md  package.xml
src/agv_bridge/include/agv_bridge/: bridge_manager.hpp  device_handler.hpp  handlers.hpp  robot.hpp  robots.hpp
src/agv_bridge/src/: bridge_manager.cpp  handlers.cpp  websocket_bridge_node.cpp
src/agv_bringup/: CMakeLists.txt  package.xml
src/agv_bringup/config/: agv_moveit.rviz  ros2_controllers.yaml
src/agv_bringup/launch/: agv.launch.xml
src/agv_description/: CMakeLists.txt  package.xml
src/agv_description/config/: joint_names_agv_description.yaml
src/agv_description/launch/: display.launch.xml  gazebo.launch
src/agv_description/meshes/: arm1_base.STL  arm1_joint1.STL  arm1_joint2.STL  arm1_joint3.STL  arm1_joint4.STL  arm1_joint5.STL  arm1_joint6.STL  arm2_base.STL  arm2_joint1.STL  arm2_joint2.STL  arm2_joint3.STL  arm2_joint4.STL  arm2_joint5.STL  arm2_joint6.STL  lifting_link.STL  revolute_link.STL
src/agv_description/rviz/: urdf_config.rviz
src/agv_description/urdf/: agv.xacro  agv_description.ros2_control.xacro  agv_robot.urdf.xacro
src/agv_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/agv_moveit_config/config/: agv_description.ros2_control.xacro  agv_description.srdf  agv_description.urdf.xacro  initial_positions.yaml  joint_limits.yaml  moveit_controllers.yaml  ros2_controllers.yaml
src/agv_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
src/agv_protocol/: CMakeLists.txt  package.xml
src/agv_protocol/include/agv_protocol/: command_parser.hpp  websocket_client.hpp  websocket_server.hpp
src/agv_protocol/src/: command_parser.cpp  websocket_client.cpp  websocket_server.cpp
src/robot_move/: CMakeLists.txt  package.xml
src/robot_move/include/robot_move/factory/: robot_move_factory.hpp
src/robot_move/include/robot_move/impl/agv/: agv_robot_move.hpp
src/robot_move/include/robot_move/impl/air/: air_robot_move.hpp
src/robot_move/include/robot_move/impl/duct/: duct_robot_move.hpp
src/robot_move/include/robot_move/impl/mag/: mag_robot_move.hpp
src/robot_move/include/robot_move/interface/: robot_move_base.hpp
src/robot_move/include/robot_move/nodes/: universal_robot_driver.hpp
src/robot_move/src/: cJSON.c  robot_move_node.cpp
src/robot_move/src/factory/: robot_move_factory.cpp
src/robot_move/src/impl/agv/: agv_robot_move.cpp
src/robot_move/src/impl/air/: air_robot_move.cpp
src/robot_move/src/impl/duct/: duct_robot_move.cpp
src/robot_move/src/impl/mag/: mag_robot_move.cpp
src/robot_move/src/nodes/: universal_robot_driver.cpp
src/startup/: CMakeLists.txt  README.md  package.xml  start_agv_server.sh  test_server.sh  test_websocket_client.py
src/startup/src/: agv_startup_websocket.py
src/wall_robot_pkg/: package.xml  setup.cfg  setup.py
src/wall_robot_pkg/launch/: system_bringup.launch.py  system_bringup.launch.xml
src/wall_robot_pkg/wall_robot_pkg/: GPIO.py  IG35.py  Path_interpolation.py  bujinmotor.py  camera_node.py  chassis_driver_node.py  get_sick_data.py  http_dispatcher.py  image_resizer.py  mechanism_driver_node.py  mission_controller_node.py  mjpeg_server_node.py  motor_485.py  navigation_module.py  pc.py  rgbd.py  robot_control.py  scan_moter.py  serial_born.py  sick_odom_node.py  test_born.py  utils.py  vision_processor_node.py  water_motor_test.py  xunizhoudianji.py
tools/: ws_video_server.py  ws_viewer.py  ws_viewer_lite.py
