<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schemaTypeNS="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>agv_protocol</name>
  <version>1.0.0</version>
  <description>AGV protocol package for WebSocket communication and command parsing</description>
  <maintainer email="user@todo.com">user</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>jsoncpp</depend>
  <depend>boost</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
